--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -20,7 +20,7 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 ### () - WED 02/08/2023
 
 ### () - TUE 02/07/2023
-* () forpost: threejs-examples-weird-face-one - update code to 146 style
+* (done) forpost: threejs-examples-weird-face-one - update code to 146 style
 * () edit: threejs-examples-weird-face-one - proof read
 
 * () demo: CubicBezierCurve3 r146 demo
