--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -22,14 +22,13 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 ### () - TUE 02/07/2023
 * (done) forpost: threejs-examples-weird-face-one - update code to 146 style
 * (done) edit: threejs-examples-weird-face-one - proof read opening and getting started
+* (done) edit: threejs-examples-weird-face-one - proof read, and expand section 1
 
 * () demo: CubicBezierCurve3 r146 demo
 
 * () videoground-beta-world: timer-train - start detail skin of landscape DAE file
 * () videoground-beta-world: timer-train - add at least one new house object for landscape DAE file
 * () videoground-beta-world: timer-train - add more objects from landscape DAE file into video5-angles.js
-
-* () edit: threejs-examples-weird-face-one - proof read, and expand section 1
 
 * () build and publish
 
