--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -23,6 +23,7 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * (done) forpost: threejs-examples-weird-face-one - update code to 146 style
 * (done) edit: threejs-examples-weird-face-one - proof read opening and getting started
 * (done) edit: threejs-examples-weird-face-one - proof read, and expand section 1
+* (done) started an r150 demo folder and wrote down some notes in new readme files
 
 * () demo: CubicBezierCurve3 r146 demo
 
