--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -24,10 +24,12 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * (done) edit: threejs-examples-weird-face-one - proof read opening and getting started
 * (done) edit: threejs-examples-weird-face-one - proof read, and expand section 1
 * (done) started an r150 demo folder and wrote down some notes in new readme files
+* (done) demo: CubicBezierCurve3 r146 demo
+* (done) videoground-beta-world: timer-train - start detail skin of landscape DAE file
 
-* () demo: CubicBezierCurve3 r146 demo
+* () videoground-beta-world: timer-train - new detail texture for object 0
+* () videoground-beta-world: timer-train - new detail texture for object 1
 
-* () videoground-beta-world: timer-train - start detail skin of landscape DAE file
 * () videoground-beta-world: timer-train - add at least one new house object for landscape DAE file
 * () videoground-beta-world: timer-train - add more objects from landscape DAE file into video5-angles.js
 
