--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -18,6 +18,11 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 ### () - THU 02/09/2023
 
 ### () - WED 02/08/2023
+* () forpost:
+* () edit:
+* () videoground-beta-world: timer-train - add at least one new house object for landscape DAE file
+* () videoground-beta-world: timer-train - add more objects from landscape DAE file into video5-angles.js
+
 
 ### () - TUE 02/07/2023
 * (done) forpost: threejs-examples-weird-face-one - update code to 146 style
@@ -26,12 +31,11 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * (done) started an r150 demo folder and wrote down some notes in new readme files
 * (done) demo: CubicBezierCurve3 r146 demo
 * (done) videoground-beta-world: timer-train - start detail skin of landscape DAE file
+* (done) videoground-beta-world: timer-train - new detail texture for object 0
+* (done) videoground-beta-world: timer-train - new detail texture for object 1
 
-* () videoground-beta-world: timer-train - new detail texture for object 0
-* () videoground-beta-world: timer-train - new detail texture for object 1
-
-* () videoground-beta-world: timer-train - add at least one new house object for landscape DAE file
-* () videoground-beta-world: timer-train - add more objects from landscape DAE file into video5-angles.js
+* () videoground-blog-posts: 
+* () videoground-beta-world: 
 
 * () build and publish
 
