--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -18,11 +18,16 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 ### () - THU 02/09/2023
 
 ### () - WED 02/08/2023
-* () forpost:
-* () edit:
+* () demo: 
+* () forpost: threejs-color - update examples to r146 style
+* () edit: threejs-color - proof read
+
+* () videoground-blog-posts: 
+
 * () videoground-beta-world: timer-train - add at least one new house object for landscape DAE file
 * () videoground-beta-world: timer-train - add more objects from landscape DAE file into video5-angles.js
 
+* () build and publish
 
 ### () - TUE 02/07/2023
 * (done) forpost: threejs-examples-weird-face-one - update code to 146 style
@@ -33,11 +38,6 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * (done) videoground-beta-world: timer-train - start detail skin of landscape DAE file
 * (done) videoground-beta-world: timer-train - new detail texture for object 0
 * (done) videoground-beta-world: timer-train - new detail texture for object 1
-
-* () videoground-blog-posts: 
-* () videoground-beta-world: 
-
-* () build and publish
 
 ### () - MON 02/06/2023
 * (done) forpost: threejs-examples-lerp-geo - start lerp-geo-r1.js
