--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -18,7 +18,7 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 ### () - THU 02/09/2023
 
 ### () - WED 02/08/2023
-* () demo: 
+* (done) demo: work on getting-started r150 demo and r150 README file
 * () forpost: threejs-color - update examples to r146 style
 * () edit: threejs-color - proof read
 
