--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -19,8 +19,8 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 
 ### () - WED 02/08/2023
 * (done) demo: work on getting-started r150 demo and r150 README file
-* () forpost: threejs-color - update examples to r146 style
-* () edit: threejs-color - proof read
+* (done) forpost: threejs-color - update examples to r146 style
+* (done) edit: threejs-color - proof read opening, and getting started
 
 * () videoground-blog-posts: 
 
