--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -21,6 +21,10 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * (done) demo: work on getting-started r150 demo and r150 README file
 * (done) forpost: threejs-color - update examples to r146 style
 * (done) edit: threejs-color - proof read opening, and getting started
+* (done) edit: threejs-color - proof read s1-basic
+
+* () forpost: threejs-color - expand s1-basic into s1-1-basic-materialcolor, and s1-2-basic-lines
+* () edit: threejs-color - write about new basic example
 
 * () videoground-blog-posts: 
 
