todo outlined for 02/09/2023

--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -14,8 +14,30 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 ### () - SAT 02/11/2023
 
 ### () - FRI 02/10/2023
+* () start post #1027 on threejs-curves-cubicbeziercurve3
+* () build and publish
+
 
 ### () - THU 02/09/2023
+* (done) fixed a bug with my new test threejs server script that resulted ina crash for a request to a file that is not there
+
+* () forpost: threejs-examples-scene-shake - rename folders
+* () forpost: threejs-examples-scene-shake - update to r146 style
+
+* () edit: threejs-examples-scene-shake - proof read opening and getting started
+* () edit: threejs-examples-scene-shake - expand getting started
+* () edit: threejs-examples-scene-shake - r1 section should come first, then r0 section
+* () edit: threejs-examples-scene-shake - proof read r1 section
+* () edit: threejs-examples-scene-shake - proof read r2 section
+* () edit: threejs-examples - proof read section on threejs-examples-scene-shake
+
+* () forpost: threejs-curves-cubicbeziercurve3
+
+* () videoground-blog-posts: video1 for threejs-dae-collada-loader
+
+* () videoground-beta-world: timer-train - add at least one new house object for landscape DAE file
+* () videoground-beta-world: timer-train - add more objects from landscape DAE file into video5-angles.js
+
 
 ### () - WED 02/08/2023
 * (done) demo: work on getting-started r150 demo and r150 README file
@@ -24,13 +46,7 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * (done) edit: threejs-color - proof read s1-basic
 * (done) forpost: threejs-color - expand s1-basic into s1-1-basic-materialcolor, and s1-2-basic-lines
 * (done) edit: threejs-color - write about new basic example
-
-* () videoground-blog-posts: 
-
-* () videoground-beta-world: timer-train - add at least one new house object for landscape DAE file
-* () videoground-beta-world: timer-train - add more objects from landscape DAE file into video5-angles.js
-
-* () build and publish
+* (done) videoground-blog-posts: video1 for threejs-buffer-geometry-set-from-points
 
 ### () - TUE 02/07/2023
 * (done) forpost: threejs-examples-weird-face-one - update code to 146 style
