todo updated for 02/10/2023

--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -17,27 +17,24 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * () start post #1027 on threejs-curves-cubicbeziercurve3
 * () build and publish
 
+* () forpost: threejs-examples-scene-shake - r2 of this example work make a good start point for making JSM modules for r150 style
 
 ### () - THU 02/09/2023
 * (done) fixed a bug with my new test threejs server script that resulted ina crash for a request to a file that is not there
+* (done) forpost: threejs-examples-scene-shake - rename folders
+* (done) forpost: threejs-examples-scene-shake - update to r146 style
+* (done) edit: threejs-examples-scene-shake - proof read opening and getting started
+* (done) edit: threejs-examples-scene-shake - expand getting started
+* (done) edit: threejs-examples-scene-shake - r1 section should come first, then r0 section
+* (done) edit: threejs-examples-scene-shake - proof read r1 section
+* (done) edit: threejs-examples-scene-shake - proof read r0 section
+* (done) edit: threejs-examples - proof read section on threejs-examples-scene-shake
 
-* () forpost: threejs-examples-scene-shake - rename folders
-* () forpost: threejs-examples-scene-shake - update to r146 style
-
-* () edit: threejs-examples-scene-shake - proof read opening and getting started
-* () edit: threejs-examples-scene-shake - expand getting started
-* () edit: threejs-examples-scene-shake - r1 section should come first, then r0 section
-* () edit: threejs-examples-scene-shake - proof read r1 section
-* () edit: threejs-examples-scene-shake - proof read r2 section
-* () edit: threejs-examples - proof read section on threejs-examples-scene-shake
-
-* () forpost: threejs-curves-cubicbeziercurve3
+* () forpost: start a threejs-curves-cubicbeziercurve3 for post folder for tomorrows new blog post
 
 * () videoground-blog-posts: video1 for threejs-dae-collada-loader
-
 * () videoground-beta-world: timer-train - add at least one new house object for landscape DAE file
 * () videoground-beta-world: timer-train - add more objects from landscape DAE file into video5-angles.js
-
 
 ### () - WED 02/08/2023
 * (done) demo: work on getting-started r150 demo and r150 README file
