--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -29,8 +29,9 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * (done) edit: threejs-examples-scene-shake - proof read r1 section
 * (done) edit: threejs-examples-scene-shake - proof read r0 section
 * (done) edit: threejs-examples - proof read section on threejs-examples-scene-shake
-
-* () forpost: start a threejs-curves-cubicbeziercurve3 for post folder for tomorrows new blog post
+* (done) forpost: start a threejs-curves-cubicbeziercurve3 for post folder for tomorrows new blog post
+* (done) forpost: threejs-curves-cubicbeziercurve3 - new section  setting position of objects
+* (done) forpost: threejs-curves-cubicbeziercurve3 - new section for curve paths
 
 * () videoground-blog-posts: video1 for threejs-dae-collada-loader
 * () videoground-beta-world: timer-train - add at least one new house object for landscape DAE file
