todo updated for 02/09/2023

--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -17,6 +17,11 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * () start post #1027 on threejs-curves-cubicbeziercurve3
 * () build and publish
 
+* () videoground-blog-posts: video1 for threejs-dae-collada-loader
+* () videoground-beta-world: timer-train - fix uvs with hosue landscape object
+* () videoground-beta-world: timer-train - add at least one new house object for landscape DAE file
+* () videoground-beta-world: timer-train - add more objects from landscape DAE file into video5-angles.js
+
 * () forpost: threejs-examples-scene-shake - r2 of this example work make a good start point for making JSM modules for r150 style
 
 ### () - THU 02/09/2023
@@ -32,10 +37,6 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * (done) forpost: start a threejs-curves-cubicbeziercurve3 for post folder for tomorrows new blog post
 * (done) forpost: threejs-curves-cubicbeziercurve3 - new section  setting position of objects
 * (done) forpost: threejs-curves-cubicbeziercurve3 - new section for curve paths
-
-* () videoground-blog-posts: video1 for threejs-dae-collada-loader
-* () videoground-beta-world: timer-train - add at least one new house object for landscape DAE file
-* () videoground-beta-world: timer-train - add more objects from landscape DAE file into video5-angles.js
 
 ### () - WED 02/08/2023
 * (done) demo: work on getting-started r150 demo and r150 README file
