todo list update for 2/10-11/2023

--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -12,17 +12,19 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 ## () - WEEK 2 - SUN 02/05/2023 - SAT 02/11/2023
 
 ### () - SAT 02/11/2023
+* () videoground-blog-posts: video1 for threejs-dae-collada-loader
+* () forpost: threejs-examples-scene-shake - r2 of this example work make a good start point for making JSM modules for r150 style
 
 ### () - FRI 02/10/2023
-* () start post #1027 on threejs-curves-cubicbeziercurve3
+* (done) start post #1027 on threejs-curves-cubicbeziercurve3
+
+* () forpost: threejs-curves-cubicbeziercurve3 - start a loop section, and have code that will be used to make video1 for the post
+* () videoground-blog-posts: video1 for threejs-curves-cubicbeziercurve3
 * () build and publish
 
-* () videoground-blog-posts: video1 for threejs-dae-collada-loader
 * () videoground-beta-world: timer-train - fix uvs with hosue landscape object
 * () videoground-beta-world: timer-train - add at least one new house object for landscape DAE file
 * () videoground-beta-world: timer-train - add more objects from landscape DAE file into video5-angles.js
-
-* () forpost: threejs-examples-scene-shake - r2 of this example work make a good start point for making JSM modules for r150 style
 
 ### () - THU 02/09/2023
 * (done) fixed a bug with my new test threejs server script that resulted ina crash for a request to a file that is not there
