--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -18,8 +18,11 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 ### () - FRI 02/10/2023
 * (done) start post #1027 on threejs-curves-cubicbeziercurve3
 
-* () forpost: threejs-curves-cubicbeziercurve3 - start a loop section, and have code that will be used to make video1 for the post
+* (done) forpost: threejs-curves-cubicbeziercurve3 - start a loop section, and have code that will be used to make video1 for the post
 * () videoground-blog-posts: video1 for threejs-curves-cubicbeziercurve3
+* () edit: threejs-curves-cubicbeziercurve3 - embed video1
+* () edit: threejs-curves-cubicbeziercurve3 - write about new loop section
+
 * () build and publish
 
 * () videoground-beta-world: timer-train - fix uvs with hosue landscape object
