--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -19,7 +19,7 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * (done) start post #1027 on threejs-curves-cubicbeziercurve3
 
 * (done) forpost: threejs-curves-cubicbeziercurve3 - start a loop section, and have code that will be used to make video1 for the post
-* () videoground-blog-posts: video1 for threejs-curves-cubicbeziercurve3
+* (done) videoground-blog-posts: video1 for threejs-curves-cubicbeziercurve3
 * () edit: threejs-curves-cubicbeziercurve3 - embed video1
 * () edit: threejs-curves-cubicbeziercurve3 - write about new loop section
 
