--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -12,22 +12,24 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 ## () - WEEK 2 - SUN 02/05/2023 - SAT 02/11/2023
 
 ### () - SAT 02/11/2023
+
+* () build and publish
+
 * () videoground-blog-posts: video1 for threejs-dae-collada-loader
 * () forpost: threejs-examples-scene-shake - r2 of this example work make a good start point for making JSM modules for r150 style
 
 ### () - FRI 02/10/2023
 * (done) start post #1027 on threejs-curves-cubicbeziercurve3
-
 * (done) forpost: threejs-curves-cubicbeziercurve3 - start a loop section, and have code that will be used to make video1 for the post
 * (done) videoground-blog-posts: video1 for threejs-curves-cubicbeziercurve3
-* () edit: threejs-curves-cubicbeziercurve3 - embed video1
-* () edit: threejs-curves-cubicbeziercurve3 - write about new loop section
-
-* () build and publish
+* (done) edit: threejs-curves-cubicbeziercurve3 - embed video1
+* (done) edit: threejs-curves-cubicbeziercurve3 - write about new loop section
 
 * () videoground-beta-world: timer-train - fix uvs with hosue landscape object
 * () videoground-beta-world: timer-train - add at least one new house object for landscape DAE file
 * () videoground-beta-world: timer-train - add more objects from landscape DAE file into video5-angles.js
+
+* () videoground-beta-world: timer-basic - new video for this one
 
 ### () - THU 02/09/2023
 * (done) fixed a bug with my new test threejs server script that resulted ina crash for a request to a file that is not there
