--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -24,11 +24,10 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * (done) videoground-blog-posts: video1 for threejs-curves-cubicbeziercurve3
 * (done) edit: threejs-curves-cubicbeziercurve3 - embed video1
 * (done) edit: threejs-curves-cubicbeziercurve3 - write about new loop section
+* (done) videoground-beta-world: timer-train - fix uvs with hosue landscape object
+* (done) videoground-beta-world: timer-train - add more objects from landscape DAE file into video5-angles.js
 
-* () videoground-beta-world: timer-train - fix uvs with hosue landscape object
-* () videoground-beta-world: timer-train - add at least one new house object for landscape DAE file
-* () videoground-beta-world: timer-train - add more objects from landscape DAE file into video5-angles.js
-
+* () videoground-beta-world: timer-train - first video for this timer video file
 * () videoground-beta-world: timer-basic - new video for this one
 
 ### () - THU 02/09/2023
