--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -12,9 +12,9 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 ## () - WEEK 2 - SUN 02/05/2023 - SAT 02/11/2023
 
 ### () - SAT 02/11/2023
-
 * () build and publish
 
+* () videoground-beta-world: timer-basic - new video for this one
 * () videoground-blog-posts: video1 for threejs-dae-collada-loader
 * () forpost: threejs-examples-scene-shake - r2 of this example work make a good start point for making JSM modules for r150 style
 
@@ -26,9 +26,7 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * (done) edit: threejs-curves-cubicbeziercurve3 - write about new loop section
 * (done) videoground-beta-world: timer-train - fix uvs with hosue landscape object
 * (done) videoground-beta-world: timer-train - add more objects from landscape DAE file into video5-angles.js
-
-* () videoground-beta-world: timer-train - first video for this timer video file
-* () videoground-beta-world: timer-basic - new video for this one
+* (done) videoground-beta-world: timer-train - first video for this timer video file
 
 ### () - THU 02/09/2023
 * (done) fixed a bug with my new test threejs server script that resulted ina crash for a request to a file that is not there
