--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -5,6 +5,15 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 ## YOUTUBE
 * () update youtube github video links from threejs-ambient-light
 
+<!-------- ----------
+-- WEEK 3
+---------- --------->
+## () - WEEK 3 - SUN 02/012/2023 - SAT 02/18/2023
+
+### () - MON 02/13/2023
+* () forpost: threejs-examples-scene-shake - r2 of this example work make a good start point for making JSM modules for r150 style
+
+### () - SUN 02/12/2023
 
 <!-------- ----------
 -- WEEK 2
@@ -12,11 +21,12 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 ## () - WEEK 2 - SUN 02/05/2023 - SAT 02/11/2023
 
 ### () - SAT 02/11/2023
+* () forpost: threejs-curves-cubicbeziercurve3 - check basic example that has to do with deltas from start points for controls
+* () edit: threejs-curves-cubicbeziercurve3 - expand more on basic examples, update code
 * () build and publish
 
-* () videoground-beta-world: timer-basic - new video for this one
 * () videoground-blog-posts: video1 for threejs-dae-collada-loader
-* () forpost: threejs-examples-scene-shake - r2 of this example work make a good start point for making JSM modules for r150 style
+* () videoground-beta-world: timer-hiit - start new timer video folder for this
 
 ### () - FRI 02/10/2023
 * (done) start post #1027 on threejs-curves-cubicbeziercurve3
@@ -27,6 +37,7 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * (done) videoground-beta-world: timer-train - fix uvs with hosue landscape object
 * (done) videoground-beta-world: timer-train - add more objects from landscape DAE file into video5-angles.js
 * (done) videoground-beta-world: timer-train - first video for this timer video file
+* (done) videoground-beta-world: timer-basic - new video for this one
 
 ### () - THU 02/09/2023
 * (done) fixed a bug with my new test threejs server script that resulted ina crash for a request to a file that is not there
