--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -21,8 +21,8 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 ## () - WEEK 2 - SUN 02/05/2023 - SAT 02/11/2023
 
 ### () - SAT 02/11/2023
-* () forpost: threejs-curves-cubicbeziercurve3 - check basic example that has to do with deltas from start points for controls
-* () edit: threejs-curves-cubicbeziercurve3 - expand more on basic examples, update code
+* (done) forpost: threejs-curves-cubicbeziercurve3 - check basic example that has to do with deltas from start points for controls
+* (done) edit: threejs-curves-cubicbeziercurve3 - expand more on basic examples, update code
 * () build and publish
 
 * () videoground-blog-posts: video1 for threejs-dae-collada-loader
