--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -14,6 +14,8 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * () forpost: threejs-examples-scene-shake - r2 of this example work make a good start point for making JSM modules for r150 style
 
 ### () - SUN 02/12/2023
+* () videoground-blog-posts: video1 for threejs-dae-collada-loader
+* () demo: start new example-tracks r146 prototype based on what I have in tracks section for threejs-curves-cubicbeziercurve3
 
 <!-------- ----------
 -- WEEK 2
@@ -23,9 +25,8 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 ### () - SAT 02/11/2023
 * (done) forpost: threejs-curves-cubicbeziercurve3 - check basic example that has to do with deltas from start points for controls
 * (done) edit: threejs-curves-cubicbeziercurve3 - expand more on basic examples, update code
-* () build and publish
+* (done) build and publish
 
-* () videoground-blog-posts: video1 for threejs-dae-collada-loader
 * () videoground-beta-world: timer-hiit - start new timer video folder for this
 
 ### () - FRI 02/10/2023
