updated todo for 02/12/2023

--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -11,11 +11,20 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 ## () - WEEK 3 - SUN 02/012/2023 - SAT 02/18/2023
 
 ### () - MON 02/13/2023
-* () forpost: threejs-examples-scene-shake - r2 of this example work make a good start point for making JSM modules for r150 style
+* () videoground-beta-world: timer-hiit - get someting minor done.
+
+* () forpost: threejs-examples-count-down - start r1 of the module
+* () forpost: threejs-examples-scene-shake - r2 of this example might make a good start point for making JSM modules for r150 style
+* () demo: start new example-tracks r146 prototype based on what I have in tracks section for threejs-curves-cubicbeziercurve3
+
+* () videoground-blog-posts: video1 for threejs-dae-collada-loader
+* () edit : threejs-dae-collada-loader - embed video
+* () videoground-beta-world: timer-hiit - 
 
 ### () - SUN 02/12/2023
+* () videoground-beta-world: timer-hiit - get the seq objects worked out for video1-core.js
 * () videoground-blog-posts: video1 for threejs-dae-collada-loader
-* () demo: start new example-tracks r146 prototype based on what I have in tracks section for threejs-curves-cubicbeziercurve3
+* () edit : threejs-dae-collada-loader - embed video
 
 <!-------- ----------
 -- WEEK 2
@@ -26,8 +35,7 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * (done) forpost: threejs-curves-cubicbeziercurve3 - check basic example that has to do with deltas from start points for controls
 * (done) edit: threejs-curves-cubicbeziercurve3 - expand more on basic examples, update code
 * (done) build and publish
-
-* () videoground-beta-world: timer-hiit - start new timer video folder for this
+* (done) videoground-beta-world: timer-hiit - start new timer video folder for this
 
 ### () - FRI 02/10/2023
 * (done) start post #1027 on threejs-curves-cubicbeziercurve3
