update of todo for 02/13/2023

--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -11,7 +11,7 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 ## () - WEEK 3 - SUN 02/012/2023 - SAT 02/18/2023
 
 ### () - MON 02/13/2023
-* () videoground-beta-world: timer-hiit - get someting minor done.
+* () videoground-beta-world: timer-hiit - start torus geometry, and veretx color attribute for video1
 
 * () forpost: threejs-examples-count-down - start r1 of the module
 * () forpost: threejs-examples-scene-shake - r2 of this example might make a good start point for making JSM modules for r150 style
@@ -19,10 +19,10 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 
 * () videoground-blog-posts: video1 for threejs-dae-collada-loader
 * () edit : threejs-dae-collada-loader - embed video
-* () videoground-beta-world: timer-hiit - 
+* () videoground-beta-world: timer-hiit - see about finishing video1-core.js
 
 ### () - SUN 02/12/2023
-* () videoground-beta-world: timer-hiit - get the seq objects worked out for video1-core.js
+* (done) videoground-beta-world: timer-hiit - get the seq objects worked out for video1-core.js
 * () videoground-blog-posts: video1 for threejs-dae-collada-loader
 * () edit : threejs-dae-collada-loader - embed video
 
