todo update for 02/13/2023

--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -10,21 +10,34 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 ---------- --------->
 ## () - WEEK 3 - SUN 02/012/2023 - SAT 02/18/2023
 
-### () - MON 02/13/2023
-* () videoground-beta-world: timer-hiit - start torus geometry, and veretx color attribute for video1
+### () - SAT 02/18/2023
 
-* () forpost: threejs-examples-count-down - start r1 of the module
+### () - FRI 02/17/2023
+
+### () - THU 02/16/2023
+
+### () - WED 02/15/2023
+
+### () - TUE 02/14/2023
 * () forpost: threejs-examples-scene-shake - r2 of this example might make a good start point for making JSM modules for r150 style
-* () demo: start new example-tracks r146 prototype based on what I have in tracks section for threejs-curves-cubicbeziercurve3
 
+### () - MON 02/13/2023
+<!-- videoground-beta-world small task -->
+* () videoground-beta-world: timer-hiit - finish vertex color effect for torus
+<!-- forpost - edit post -->
+* () forpost: threejs-examples-count-down - start r1 of the module
+* () edit: threejs-examples-count-down - write about r1 if done, else the what you have when done for the day with this.
+<!-- demo - new post -->
+* () demo: start new example-tracks r146 prototype based on what I have in tracks section for threejs-curves-cubicbeziercurve3
+<!-- videoground-blog-posts -->
 * () videoground-blog-posts: video1 for threejs-dae-collada-loader
 * () edit : threejs-dae-collada-loader - embed video
+<!-- videoground-beta-world -->
 * () videoground-beta-world: timer-hiit - see about finishing video1-core.js
 
 ### () - SUN 02/12/2023
 * (done) videoground-beta-world: timer-hiit - get the seq objects worked out for video1-core.js
-* () videoground-blog-posts: video1 for threejs-dae-collada-loader
-* () edit : threejs-dae-collada-loader - embed video
+* (done) videoground-beta-world: timer-hiit - start torus geometry, and veretx color attribute for video1
 
 <!-------- ----------
 -- WEEK 2
