--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -2,6 +2,8 @@
 
 THREEJS, VIDEOGROUND-BETA-WORLD
 
+I would like to keep staying in my lane with threejs, only branching off into other subjects that might be loosely related to threejs. I would also like to stop neglecting my beta world videoground project which means experimenting more with different kinds of video content.
+
 ## YOUTUBE
 * () update youtube github video links from threejs-ambient-light
 
