--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -24,11 +24,10 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 * () forpost: threejs-examples-scene-shake - r2 of this example might make a good start point for making JSM modules for r150 style
 
 ### () - MON 02/13/2023
+* (done) forpost: threejs-examples-count-down - start r1 of the module
+* (done) edit: threejs-examples-count-down - write about r1 if done, else the what you have when done for the day with this.
 <!-- videoground-beta-world small task -->
 * () videoground-beta-world: timer-hiit - finish vertex color effect for torus
-<!-- forpost - edit post -->
-* () forpost: threejs-examples-count-down - start r1 of the module
-* () edit: threejs-examples-count-down - write about r1 if done, else the what you have when done for the day with this.
 <!-- demo - new post -->
 * () demo: start new example-tracks r146 prototype based on what I have in tracks section for threejs-curves-cubicbeziercurve3
 <!-- videoground-blog-posts -->
