--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -26,15 +26,13 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 ### () - MON 02/13/2023
 * (done) forpost: threejs-examples-count-down - start r1 of the module
 * (done) edit: threejs-examples-count-down - write about r1 if done, else the what you have when done for the day with this.
-<!-- videoground-beta-world small task -->
-* () videoground-beta-world: timer-hiit - finish vertex color effect for torus
+* (done) videoground-beta-world: timer-hiit - finish vertex color effect for torus
+* (done) videoground-beta-world: timer-hiit - see about finishing video1-core.js
 <!-- demo - new post -->
 * () demo: start new example-tracks r146 prototype based on what I have in tracks section for threejs-curves-cubicbeziercurve3
 <!-- videoground-blog-posts -->
 * () videoground-blog-posts: video1 for threejs-dae-collada-loader
 * () edit : threejs-dae-collada-loader - embed video
-<!-- videoground-beta-world -->
-* () videoground-beta-world: timer-hiit - see about finishing video1-core.js
 
 ### () - SUN 02/12/2023
 * (done) videoground-beta-world: timer-hiit - get the seq objects worked out for video1-core.js
