--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -21,18 +21,24 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 ### () - WED 02/15/2023
 
 ### () - TUE 02/14/2023
+<!-- videoground-beta-world -->
+* () videoground-beta-world: timer-hiit - work on video2-camera-movement.js
+<!-- forpost / edit -->
 * () forpost: threejs-examples-scene-shake - r2 of this example might make a good start point for making JSM modules for r150 style
+* () edit: threejs-examples-scene-shake - write about new r2 form of example
+<!-- demo / new post -->
+* () demo: start new example-tracks r146 prototype based on what I have in tracks section for threejs-curves-cubicbeziercurve3
+<!-- videoground-blog-posts -->
+* () videoground-blog-posts: video1 for threejs-dae-collada-loader
+* () edit : threejs-dae-collada-loader - embed video
+
 
 ### () - MON 02/13/2023
 * (done) forpost: threejs-examples-count-down - start r1 of the module
 * (done) edit: threejs-examples-count-down - write about r1 if done, else the what you have when done for the day with this.
 * (done) videoground-beta-world: timer-hiit - finish vertex color effect for torus
 * (done) videoground-beta-world: timer-hiit - see about finishing video1-core.js
-<!-- demo - new post -->
-* () demo: start new example-tracks r146 prototype based on what I have in tracks section for threejs-curves-cubicbeziercurve3
-<!-- videoground-blog-posts -->
-* () videoground-blog-posts: video1 for threejs-dae-collada-loader
-* () edit : threejs-dae-collada-loader - embed video
+* () videoground-beta-world: timer-hiit - start video2-camera-movement.js
 
 ### () - SUN 02/12/2023
 * (done) videoground-beta-world: timer-hiit - get the seq objects worked out for video1-core.js
