--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -38,7 +38,7 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 * (done) edit: threejs-examples-count-down - write about r1 if done, else the what you have when done for the day with this.
 * (done) videoground-beta-world: timer-hiit - finish vertex color effect for torus
 * (done) videoground-beta-world: timer-hiit - see about finishing video1-core.js
-* () videoground-beta-world: timer-hiit - start video2-camera-movement.js
+* (done) videoground-beta-world: timer-hiit - start video2-camera-movement.js
 
 ### () - SUN 02/12/2023
 * (done) videoground-beta-world: timer-hiit - get the seq objects worked out for video1-core.js
