--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -22,7 +22,8 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 
 ### () - TUE 02/14/2023
 <!-- videoground-beta-world -->
-* () videoground-beta-world: timer-hiit - work on video2-camera-movement.js
+* () videoground-beta-world: timer-hiit - finish video2-camera-movement.js
+* () videoground-beta-world: timer-hiit - start video3-sinwave.js
 <!-- forpost / edit -->
 * () forpost: threejs-examples-scene-shake - r2 of this example might make a good start point for making JSM modules for r150 style
 * () edit: threejs-examples-scene-shake - write about new r2 form of example
