--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -21,12 +21,10 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 ### () - WED 02/15/2023
 
 ### () - TUE 02/14/2023
-<!-- videoground-beta-world -->
-* () videoground-beta-world: timer-hiit - finish video2-camera-movement.js
-* () videoground-beta-world: timer-hiit - start video3-sinwave.js
-<!-- forpost / edit -->
-* () forpost: threejs-examples-scene-shake - r2 of this example might make a good start point for making JSM modules for r150 style
-* () edit: threejs-examples-scene-shake - write about new r2 form of example
+* (done) videoground-beta-world: timer-hiit - finish video2-camera-movement.js
+* (done) videoground-beta-world: timer-hiit - start video3-sinwave.js
+* (done) forpost: threejs-examples-scene-shake - r2 of this example might make a good start point for making JSM modules for r150 style
+* (done) edit: threejs-examples-scene-shake - write about new r2 form of example
 <!-- demo / new post -->
 * () demo: start new example-tracks r146 prototype based on what I have in tracks section for threejs-curves-cubicbeziercurve3
 <!-- videoground-blog-posts -->
