--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -19,18 +19,18 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 ### () - THU 02/16/2023
 
 ### () - WED 02/15/2023
+<!-- demo / new post -->
+* () demo: start new example-tracks r146 prototype based on what I have in tracks section for threejs-curves-cubicbeziercurve3
+<!-- videoground-blog-posts -->
+* () videoground-blog-posts: finish up threejs-dae-collada-loader
+* () edit : threejs-dae-collada-loader - embed video
 
 ### () - TUE 02/14/2023
 * (done) videoground-beta-world: timer-hiit - finish video2-camera-movement.js
 * (done) videoground-beta-world: timer-hiit - start video3-sinwave.js
 * (done) forpost: threejs-examples-scene-shake - r2 of this example might make a good start point for making JSM modules for r150 style
 * (done) edit: threejs-examples-scene-shake - write about new r2 form of example
-<!-- demo / new post -->
-* () demo: start new example-tracks r146 prototype based on what I have in tracks section for threejs-curves-cubicbeziercurve3
-<!-- videoground-blog-posts -->
-* () videoground-blog-posts: video1 for threejs-dae-collada-loader
-* () edit : threejs-dae-collada-loader - embed video
-
+* (done) videoground-blog-posts: start video1 for threejs-dae-collada-loader
 
 ### () - MON 02/13/2023
 * (done) forpost: threejs-examples-count-down - start r1 of the module
