todo update for 02/16/2023

--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -17,8 +17,10 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 ### () - FRI 02/17/2023
 
 ### () - THU 02/16/2023
+* () videoground-beta-world: timer-hiit - video4-ratio.js have warm up part
 
 ### () - WED 02/15/2023
+* (done) videoground-beta-world: timer-hiit - video4-ratio.js started
 <!-- demo / new post -->
 * () demo: start new example-tracks r146 prototype based on what I have in tracks section for threejs-curves-cubicbeziercurve3
 <!-- videoground-blog-posts -->
