--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -18,11 +18,11 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 
 ### () - THU 02/16/2023
 * () videoground-beta-world: timer-hiit - video4-ratio.js have warm up part
+* () forpost: threejs-examples-tracks - work on more r0 examples, write down any notes for r1 if anything comes up
 
 ### () - WED 02/15/2023
 * (done) videoground-beta-world: timer-hiit - video4-ratio.js started
-<!-- demo / new post -->
-* () demo: start new example-tracks r146 prototype based on what I have in tracks section for threejs-curves-cubicbeziercurve3
+* (done) forpost: threejs-examples-tracks - start new project based on what I have in tracks section for threejs-curves-cubicbeziercurve3
 <!-- videoground-blog-posts -->
 * () videoground-blog-posts: finish up threejs-dae-collada-loader
 * () edit : threejs-dae-collada-loader - embed video
