todo update for 02/16/2023

--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -15,17 +15,22 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 ### () - SAT 02/18/2023
 
 ### () - FRI 02/17/2023
+* () start post #1028 on threejs-examples-tracks
 
 ### () - THU 02/16/2023
 * () videoground-beta-world: timer-hiit - video4-ratio.js have warm up part
+
+* () forpost: threejs-capsule-geometry - update demos to r146 style
+* () forpost: threejs-capsule-geometry - one new demo
+* () edit: threejs-capsule-geometry - proof read, expand
+
 * () forpost: threejs-examples-tracks - work on more r0 examples, write down any notes for r1 if anything comes up
 
 ### () - WED 02/15/2023
 * (done) videoground-beta-world: timer-hiit - video4-ratio.js started
 * (done) forpost: threejs-examples-tracks - start new project based on what I have in tracks section for threejs-curves-cubicbeziercurve3
-<!-- videoground-blog-posts -->
-* () videoground-blog-posts: finish up threejs-dae-collada-loader
-* () edit : threejs-dae-collada-loader - embed video
+* (done) videoground-blog-posts: finish up threejs-dae-collada-loader
+* (done) edit : threejs-dae-collada-loader - embed video
 
 ### () - TUE 02/14/2023
 * (done) videoground-beta-world: timer-hiit - finish video2-camera-movement.js
