todo update for 02/16/2023

--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -14,16 +14,24 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 
 ### () - SAT 02/18/2023
 
+<!-- videoground R6 --->
+* () videoground: do some more work on R6
+
 ### () - FRI 02/17/2023
+<!-- forpost/new -->
 * () start post #1028 on threejs-examples-tracks
+<!-- videoground R6 --->
+* () videoground: do some more work on R6.
 
 ### () - THU 02/16/2023
+* (done) videoground: add a run button, and do a little work on r6, the todo list, ect
+<!-- videoground-beta-world -->
 * () videoground-beta-world: timer-hiit - video4-ratio.js have warm up part
-
+<!-- forpost/edit -->
 * () forpost: threejs-capsule-geometry - update demos to r146 style
 * () forpost: threejs-capsule-geometry - one new demo
 * () edit: threejs-capsule-geometry - proof read, expand
-
+<!-- forpost/new -->
 * () forpost: threejs-examples-tracks - work on more r0 examples, write down any notes for r1 if anything comes up
 
 ### () - WED 02/15/2023
