--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -22,11 +22,12 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 * () start post #1028 on threejs-examples-tracks
 <!-- videoground R6 --->
 * () videoground: do some more work on R6.
+<!-- videoground-beta-world -->
+* () videoground-beta-world: timer-hiit - start video5-cdr1.js
 
 ### () - THU 02/16/2023
 * (done) videoground: add a run button, and do a little work on r6, the todo list, ect
-<!-- videoground-beta-world -->
-* () videoground-beta-world: timer-hiit - video4-ratio.js have warm up part
+* (done) videoground-beta-world: timer-hiit - video4-ratio.js have warm up part
 <!-- forpost/edit -->
 * () forpost: threejs-capsule-geometry - update demos to r146 style
 * () forpost: threejs-capsule-geometry - one new demo
