--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -29,9 +29,11 @@ I would like to keep staying in my lane with threejs, only branching off into ot
 * (done) videoground: add a run button, and do a little work on r6, the todo list, ect
 * (done) videoground-beta-world: timer-hiit - video4-ratio.js have warm up part
 <!-- forpost/edit -->
+* (done) edit: threejs-capsule-geometry - proof read opening
+* () edit: threejs-capsule-geometry - proof read and expand getting started section
 * () forpost: threejs-capsule-geometry - update demos to r146 style
 * () forpost: threejs-capsule-geometry - one new demo
-* () edit: threejs-capsule-geometry - proof read, expand
+* () edit: threejs-capsule-geometry - write about new demo
 <!-- forpost/new -->
 * () forpost: threejs-examples-tracks - work on more r0 examples, write down any notes for r1 if anything comes up
 
